<resources>
    <string name="app_name">Timecatcher</string>
    <string-array name="my_facebook_permissions">
        <item>public_profile</item>
        <item>user_friends</item>
    </string-array>
    <string name="facebook_app_id">1229123093769166</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- NEW TASK -->
    <string name="new_task_title">New Task</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="new_task_name">Name:</string>
    <string name="new_task_description">Description:</string>
    <string name="new_task_category">Categories:</string>
    <string name="new_task_TotalTime">Total Time:</string>
    <string name="new_task_category_hint">Pick all that apply</string>
    <string name="new_task_fixed">Fixed</string>

    <string name="new_task_start_time_label">From: </string>
    <string name="new_task_end_time_label">To: </string>


    <string name="start_time_button">Change</string>
    <string name="end_time_button">Change</string>

    <string name="new_task_save_button">Save</string>
    <string name="new_task_name_hint">Gym, Homework etc.</string>
    <string name="new_task_description_hint">Add a short description</string>

    <string name="constraint_delete_button">Delete</string>
    <string name="constraintTitle">Constraints</string>
    <string name="totalTimeHours">hours</string>
    <string name="totalTimeMinutes">min</string>
    <string name="addConstraintButton"> Add Constraint </string>

    <!-- Graph -->
    <string name="graphContainer">graph Container</string>
    <string name="pieChartContainer">pie Chart  Container</string>
    <string name="categorySelectedText">category Selected Text</string>
    <string name="startDateGraph">start Date Graph</string>
    <string name="endDateGraph">end Date Graph</string>
    <string name="graphRealTabContent">graph Real Tab Content</string>
    <string name="NoChartText">No Chart Text</string>
    <string name="pick_date">pick_date</string>
    <string name="button1">button1</string>

    <string-array name="new_task_default_categories_array">
        <item>School</item>
        <item>Work</item>
        <item>Housework</item>
        <item>Family</item>
        <item>Gym</item>
    </string-array>

    <string-array name="constraint_order">
        <item>Before</item>
        <item>After</item>
    </string-array>

    <string name="push_notification">Notification</string>
    <string name="invitation">SEND INVITATION</string>

    <string name="totalTimeString">%1$d h %2$d m</string>
    <string name="title_calendar_import">Import from Calendar</string>
    <string name="import_time_picker_label">Import Events For:</string>
    <string name="import_select_all">Select all</string>
    <string name="import_select_none">Select None</string>
    <string name="import_button">Import</string>
    <string name="selectAll">Select All</string>
    <string name="import_picker_done">Done</string>
    <string name="import_count">Found %1$d tasks to be imported</string>
    <string name="import_pick">Select Tasks</string>
    <string name="button_saving">Saving...</string>

    <string-array name="import_picker_values">
        <item>Today</item>
        <item>This week</item>
    </string-array>


</resources>
