<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:minWidth="300dp"
    android:orientation="vertical">

    <com.cengalabs.flatui.views.FlatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dip"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/title_calendar_import"
        android:textSize="25sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/import_time_picker_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/importSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>


    <TextView
        android:id="@+id/importCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/import_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_button"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_pick"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>


</LinearLayout>
