<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.cengalabs.flatui.views.FlatTextView
            android:id="@+id/title_newtask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dip"
            android:layout_marginTop="10dip"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/new_task_title"
            android:textSize="25sp"></com.cengalabs.flatui.views.FlatTextView>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/new_task_save_button"
            android:textColor="@color/white"
            android:background="@drawable/button_custom"/>

        <!--com.cengalabs.flatui.views.FlatButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/new_task_save_button"
            android:textStyle="bold"
            flatui:fl_blockButtonEffectHeight="3dp"
            flatui:fl_theme="@array/orange"
            flatui:fl_touchEffect="fl_ripple" /-->
    </RelativeLayout>

    <com.cengalabs.flatui.views.FlatTextView
        android:id="@+id/title_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dip"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textSize="15sp"></com.cengalabs.flatui.views.FlatTextView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:hint="@string/new_task_name_hint"
                android:singleLine="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="true"
                app:met_floatingLabelText="@string/new_task_name"
                app:met_floatingLabelTextSize="15sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:hint="@string/new_task_description_hint"
                android:singleLine="true"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAlwaysShown="true"
                app:met_floatingLabelText="@string/new_task_description"
                app:met_floatingLabelTextSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.33"
                    android:text="@string/new_task_category"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <com.cpsc.timecatcher.gui.MultiSpinner
                    android:id="@+id/categories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.67"/>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/new_task_fixed"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Switch
                    android:id="@+id/fixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:checked="false" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/startTimeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:visibility="gone">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/startTimeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="{fa-hourglass-start}"
                    android:layout_alignBaseline="@+id/startTime"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="10dp"
                    android:layout_toRightOf="@id/startTimeIcon"
                    android:layout_alignBaseline="@+id/startTime"
                    android:text="@string/new_task_start_time_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:paddingTop="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/endTimeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:visibility="gone">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/endTimeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="{fa-hourglass-end}"
                    android:layout_alignBaseline="@+id/endTime"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:paddingEnd="5dp"
                    android:paddingStart="10dp"
                    android:layout_toEndOf="@id/endTimeIcon"
                    android:layout_alignBaseline="@+id/endTime"
                    android:text="@string/new_task_end_time_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/endTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:paddingTop="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/totalTimeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/totalTimeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="{fa-clock-o}"
                    android:layout_alignBaseline="@+id/totalTimeLabel"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/totalTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:paddingStart="10dp"
                    android:layout_toEndOf="@id/totalTimeIcon"
                    android:text="@string/new_task_TotalTime"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/totalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_alignParentEnd="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.cengalabs.flatui.views.FlatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dip"
                    android:layout_marginTop="10dip"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/constraintTitle"
                    android:textSize="20sp"></com.cengalabs.flatui.views.FlatTextView>

                <Button
                    android:id="@+id/add_constraint_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/addConstraintButton"
                    android:textColor="@color/white"
                    android:background="@drawable/button_custom"/>

                <!--com.cengalabs.flatui.views.FlatButton
                    android:id="@+id/add_constraint_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/addConstraintButton"
                    android:textStyle="bold"
                    flatui:fl_blockButtonEffectHeight="3dp"
                    flatui:fl_theme="@array/grass"
                    flatui:fl_touchEffect="fl_ripple" /-->

            </RelativeLayout>

            <com.cpsc.timecatcher.gui.NoScrollListView
                android:id="@+id/constraints_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="false" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>


